--- a/tmux.conf
+++ b/tmux.conf
@@ -4,4 +4,5 @@ bind l select-pane -R
 bind h select-pane -L
 bind s split-window -v
 bind S split-window -h
+set -g status-style bg=gray2
 set -g prefix M-k
