--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,14 @@ bind l select-pane -R
 bind h select-pane -L
 bind s split-window -v
 bind S split-window -h
-#set -g status-style bg=gray2
 set -g status-style bg=black
 set -g prefix M-k
 set -g status-right "%m-%d %H:%M"
+
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ",alacritty*:Tc"
+
+
+#bind o run "xclip -o  -selection primary|xmessage  -file - ;xclip -o  -selection primary | tmux load-buffer -; tmux paste-buffer"
+bind o run "xclip -o  -selection primary|gxmessage -fn 'Hack 24'  -file - ;xclip -o  -selection primary | tmux load-buffer -; tmux paste-buffer"
+#bind -T root MouseDown3Pane  run "xclip -o  -selection primary|xmessage  -file - ;xclip -o  -selection primary | tmux load-buffer -; tmux paste-buffer"
