--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,7 @@ bind S split-window -h
 set -g status-style bg=black
 set -g prefix M-k
 set -g status-right "%m-%d %H:%M"
-
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ",alacritty*:Tc"
-
-
-#bind o run "xclip -o  -selection primary|xmessage  -file - ;xclip -o  -selection primary | tmux load-buffer -; tmux paste-buffer"
-bind o run "xclip -o  -selection primary|gxmessage -fn 'Hack 24'  -file - ;xclip -o  -selection primary | tmux load-buffer -; tmux paste-buffer"
-#bind -T root MouseDown3Pane  run "xclip -o  -selection primary|xmessage  -file - ;xclip -o  -selection primary | tmux load-buffer -; tmux paste-buffer"
+setw -g mode-keys vi
+set-option -g history-limit 8000
